<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_category_help_about">

    <androidx.preference.PreferenceCategory
        android:key="help_group"
        android:title="@string/settings_help_section_title">

        <Preference
            android:key="nav:setup_help"
            android:title="@string/settings_setup_wizard_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="nav:report_issue"
            android:title="@string/settings_report_issue_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:key="about_group"
        android:title="@string/settings_about_section_title">

        <Preference
            android:key="nav:about"
            android:title="@string/menu_about_item"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="nav:licenses"
            android:title="@string/about_additional_software_licenses"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="nav:changelog"
            android:title="@string/settings_full_changelog_title"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>

